# react-auth-sample

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  sonar-project.properties
.github/workflows/: docker-integration-tests.yml  react-auth-backend.yml  react-auth-frontend.yml  rust.yml  sonarcloud.yml
e2e/: package.json
e2e/cypress/integration/: spec.js
react-auth-backend/: Cargo.toml  Dockerfile
react-auth-backend/src/: controllers.rs  hashing.rs  main.rs  structs.rs
react-auth-frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
react-auth-frontend/src/: App.test.tsx  App.tsx  index.tsx  types.ts
react-auth-frontend/src/__snapshots__/: App.test.tsx.snap
react-auth-frontend/src/components/: Footer.tsx
react-auth-frontend/src/services/: api.ts
react-auth-frontend/src/state/: rootReducer.ts  store.ts
react-auth-frontend/src/state/reducers/: Account.ts  Auth.ts
react-auth-frontend/src/tests/: App.test.tsx  ReactLogo.test.tsx  SignIn.test.tsx
react-auth-frontend/src/tests/__snapshots__/: ReactLogo.test.tsx.snap  SignIn.test.tsx.snap
react-auth-frontend/src/views/: ReactLogo.tsx  SignIn.tsx
