[package]
name = "react-auth-backend"
version = "0.1.0"
authors = ["Kenneth Fossen <fossen.kenneth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
jsonwebtoken = "7.2"
serde_json = "1.0.64"
serde = {version = "1.0", features = ["derive"]}
env_logger = "0.8.3"

sodiumoxide = "0.2.6"
chrono = "0.4"